--- a/Pages/bored.html
+++ b/Pages/bored.html
@@ -8,8 +8,8 @@
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
-    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="../Develop/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
 
 <body>
@@ -17,13 +17,13 @@
     <nav class="green lighten-3" role="navigation">
         <div class="nav-wrapper container"><a id="logo-container" href="index.html" class="brand-logo">Covid site</a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="symptom-tracker.html">Symptom Tracker</a></li>
                 <li><a href="bored.html">Bored during lockdown?</a></li>
             </ul>
             <!-- MOBILE NAV -->
             <ul id="nav-mobile" class="sidenav">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="symptom-tracker.html">Symptom Tracker</a></li>
                 <li><a href="bored.html">Bored during lockdown?</a></li>
             </ul>
@@ -58,8 +58,8 @@
 
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="js/materialize.js"></script>
-    <script src="js/script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="../Develop/js/script.js"></script>
 </body>
 
 </html>
