--- a/Pages/bored.html
+++ b/Pages/bored.html
@@ -60,6 +60,8 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="../Develop/js/script.js"></script>
+    <script src="../Develop/js/netflix.js"></script>
+
 </body>
 
 </html>
