Added 2 checkboxes for js testing

--- a/Pages/bored.html
+++ b/Pages/bored.html
@@ -40,6 +40,18 @@
             <div class="row center">
                 <h5 class="header col s12 light">Use our generator to find movies or shows to watch!</h5>
                 <div class="row">
+                    <p>
+                        <label>
+                          <input type="checkbox" class="filled-in" checked="checked" id="action" />
+                          <span>Action</span>
+                        </label>
+                      </p>
+                      <p>
+                        <label>
+                          <input type="checkbox" class="filled-in" checked="checked" id="horror" />
+                          <span>Horror</span>
+                        </label>
+                      </p>
                 </div>
             </div>
         </div>
