--- a/Pages/symptom-tracker.html
+++ b/Pages/symptom-tracker.html
@@ -39,6 +39,54 @@
                 <h5 class="header col s12 light">Use our Symptom Tracker and get guidance on the steps to take if you
                     think you may have Covid</h5>
                 <div class="row">
+                    <!-- SYMPTOMS -->
+                    <p>
+                        <label>
+                            <input type="checkbox" class="filled-in" checked="checked" id="high-temp" />
+                            <span>A high temperature - this means you feel hot to touch on your chest or back </span>
+                        </label>
+                    </p>
+                    <p>
+                        <label>
+                            <input type="checkbox" class="filled-in" checked="checked" id="cough" />
+                            <span>A new, continuous cough – this means coughing a lot for more than an hour, or 3 or
+                                more coughing episodes in 24 hours</span>
+                        </label>
+                    </p>
+                    <p>
+                        <label>
+                            <input type="checkbox" class="filled-in" checked="checked" id="taste" />
+                            <span>A loss or change to your sense of smell or taste – this means you've noticed you
+                                cannot smell or taste anything, or things smell or taste different to normal</span>
+                        </label>
+                    </p>
+
+                    <!-- Modal Trigger -->
+                    <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Get Advice</a>
+
+                    <!-- Modal Structure -->
+                    <div id="modal1" class="modal">
+                        <div class="modal-content">
+                            <h4>What to do if you have symptoms</h4>
+                            <p>If you have any of the main symptoms of coronavirus:
+                                <br>
+                                <br>
+                                1. Get a test to check if you have coronavirus as soon as possible.
+                                <br>
+                                <br>
+                                2. You and anyone you live with should stay at home and not have visitors until you get
+                                your test result – only leave your home to have a test.
+                                <br>
+                                <br>
+                                Anyone in your support bubble should also stay at home if you have been in close contact
+                                with them since your symptoms started or during the 48 hours before they started.</p>
+                                <br>
+                                Visit the <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/"> NHS website</a> to get the latest advice about COVID-19
+                        </div>
+                        <div class="modal-footer">
+                            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -61,6 +109,10 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="../Develop/js/script.js"></script>
+    <script text> $(document).ready(function(){
+        $('.modal').modal();
+      });
+              </script>
 </body>
 
 </html>
