--- a/index.html
+++ b/index.html
@@ -49,25 +49,26 @@
           <!-- USED LATER TO ADD PREVIOUSLY SEARCHED CITIES -->
           <form id="history"></form>
         </div>
+        </div>
       </div>
+      <div class="container" id="results">
+        <div class="row">
+          <div class="col s3 cases green darken-1 white-text z-depth-2">cases</div>
+          <div class="col s3 deaths green darken-1 white-text offset-s1 z-depth-2">deaths</div>
+          <div class="col s3 hospital green darken-1 white-text offset-s1 z-depth-2">hospital</div>
+        </div>
     </div>
   </div>
   <!-- CAROUSEL -->
-  <div class="carousel carousel-slider center">
+  <!-- carousel is too big -->
+  <div class="carousel carousel-slider center" style="max-height: 550px;">
     <div class="carousel-fixed-item center">
-      <a class="btn waves-effect white grey-text darken-text-2">button</a>
     </div>
-    <div class="carousel-item blue lighten-1 white-text" href="#one!">
-      <h2>First Panel</h2>
-      <p class="white-text">First panel</p>
+    <div class="carousel-item"><img class="responsive-img" src="Assets/Images/row-1-col-1.jpg">
     </div>
-    <div class="carousel-item indigo lighten-1 white-text" href="#two!">
-      <h2>Second Panel</h2>
-      <p class="white-text">Second panel</p>
+    <div class="carousel-item"><img class="responsive-img" src="Assets/Images/row-1-col-2.jpg">
     </div>
-    <div class="carousel-item deep-purple lighten-1 white-text" href="#three!">
-      <h2>Third Panel</h2>
-      <p class="white-text">Third panel</p>
+    <div class="carousel-item"><img class="responsive-img" src="Assets/Images/row-1-col-3.jpg">
     </div>
   </div>
   </div>
