--- a/Pages/symptom-tracker.html
+++ b/Pages/symptom-tracker.html
@@ -9,10 +9,19 @@
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link href="../Develop/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="../Develop/css/symptoms.css" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
 
 <body>
+
+<!-- <style>
+    #main{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 50px;
+    border-radius: 20px;
+  }
+</style> -->
+
     <!-- NAV BAR -->
     <nav class="green lighten-3" role="navigation">
         <div class="nav-wrapper container"><a id="logo-container" href="index.html" class="brand-logo">Covid site</a>
@@ -32,12 +41,13 @@
     </nav>
     <!-- MAIN HEADER -->
     <div class="section no-pad-bot" id="index-banner">
-        <div class="container">
+        <div class="container green lighten-5" id="main">
             <br><br>
             <h1 class="header center green-text">Check your symptoms</h1>
             <div class="row center">
                 <h5 class="header col s12 light">Use our Symptom Tracker and get guidance on the steps to take if you
                     think you may have Covid</h5>
+                <div class="container">
                 <div class="row">
                     <!-- SYMPTOMS -->
                     <p>
@@ -60,6 +70,7 @@
                                 cannot smell or taste anything, or things smell or taste different to normal</span>
                         </label>
                     </p>
+                </div>
 
                     <!-- Modal Trigger -->
                     <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Get Advice</a>
@@ -79,9 +90,11 @@
                                 <br>
                                 <br>
                                 Anyone in your support bubble should also stay at home if you have been in close contact
-                                with them since your symptoms started or during the 48 hours before they started.</p>
-                                <br>
-                                Visit the <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/"> NHS website</a> to get the latest advice about COVID-19
+                                with them since your symptoms started or during the 48 hours before they started.
+                            </p>
+                            <br>
+                            Visit the <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/"> NHS website</a> to
+                            get the latest advice about COVID-19
                         </div>
                         <div class="modal-footer">
                             <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
@@ -109,10 +122,10 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="../Develop/js/script.js"></script>
-    <script text> $(document).ready(function(){
-        $('.modal').modal();
-      });
-              </script>
+    <script text> $(document).ready(function () {
+            $('.modal').modal();
+        });
+    </script>
 </body>
 
 </html>
