--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </nav>
   <!-- MAIN HEADER AND CITY SEARCH BAR -->
   <div class="section no-pad-bot" id="index-banner">
-    <div class="container">
+    <div class="container green lighten-5" id="main">
       <br><br>
       <h1 class="header center green-text">Get COVID information for your area</h1>
       <div class="row center">
@@ -44,23 +44,35 @@
               <div class="input-field">
                 <input placeholder="e.g Birmingham, London" id="enter-city" type="text" class="validate">
                 <label for="city">Enter city</label>
+                <!-- <p class="hide" id="error">Please enter a city</p> -->
                 <button class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
           </form>
           <!-- USED LATER TO ADD PREVIOUSLY SEARCHED CITIES -->
           <form id="history"></form>
         </div>
-        </div>
       </div>
-      <div class="container" id="results">
-        <div class="row">
-          <div class="col s3 cases green darken-1 white-text z-depth-2">cases</div>
-          <div class="col s3 deaths green darken-1 white-text offset-s1 z-depth-2">deaths</div>
-          <div class="col s3 hospital green darken-1 white-text offset-s1 z-depth-2">hospital</div>
-        </div>
+    </div>
+    <!-- DISPLAYS SEARCH RESULTS -->
+    <div class="container" id="results">
+      <div class="row">
+        <div class="col s3 cases green darken-1 white-text z-depth-2" id="cases">cases</div>
+        <div class="col s3 deaths green darken-1 white-text offset-s1 z-depth-2" id="deaths">deaths</div>
+        <div class="col s3 hospital green darken-1 white-text offset-s1 z-depth-2" id="hospital">hospital</div>
+      </div>
     </div>
   </div>
+
+  <!-- ALERT MODALS
+  <div id="modal-entercity" class="modal">
+    <div class="modal-content">
+      <h4>Please enter a valid city</h4>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+    </div>
+  </div> -->
+
   <!-- CAROUSEL -->
-  <!-- carousel is too big -->
   <div class="carousel carousel-slider center" style="max-height: 550px;">
     <div class="carousel-fixed-item center">
     </div>
@@ -87,6 +99,19 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="Develop/js/script.js"></script>
+
+<!-- 
+  <script src="text/javascript">
+   
+  function validateForm() {
+  var enter = document.getElementById("enter-city");
+  var error = document.getElementById("error")
+  if (enter === "") {
+    error.removeClass(hide);
+  }
+}
+  </script> -->
+  
   </div>
 </body>
 
