Fixed the checkboxes to be aligned properly when viewed in mobile version.

--- a/Pages/bored.html
+++ b/Pages/bored.html
@@ -55,7 +55,7 @@
           </div>
 
           <div class="row flexbox " id="content">
-            <div class="col s4 show">
+            <div class="col s4 show colWidth">
               <p>
                 <label>
                   <input type="checkbox" class="filled-in" checked="checked" id="Action" />
@@ -76,7 +76,7 @@
               </p>
             </div>
 
-            <div class="col s4 show" id="genre-checkbox">
+            <div class="col s4 show colWidth">
               <p>
                 <label>
                   <input type="checkbox" class="filled-in" checked="checked" id="Documentaries" />
@@ -96,7 +96,7 @@
                 </label>
               </p>
             </div>
-            <div class="col s4 show">
+            <div class="col s4 show colWidth">
               <p>
                 <label>
                   <input type="checkbox" class="filled-in" checked="checked" id="International" />
