--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 <input placeholder="e.g Birmingham, London" id="enter-city" type="text" class="validate">
                 <label for="city">Enter city</label>
                 <!-- <p class="hide" id="error">Please enter a city</p> -->
-                <button class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
+                <button id="search-btn" class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
+                <button id="clear-btn" class="btn waves-effect waves-light" type="submit" name="action">Clear Results</button>
           </form>
           <!-- USED LATER TO ADD PREVIOUSLY SEARCHED CITIES -->
           <form id="history"></form>
@@ -53,16 +54,12 @@
       </div>
     </div>
     <!-- DISPLAYS SEARCH RESULTS -->
-    <div class="container" id="results">
-      <div class="row">
-        <div class="col s3 cases green darken-1 white-text z-depth-2" id="cases">cases</div>
-        <div class="col s3 deaths green darken-1 white-text offset-s1 z-depth-2" id="deaths">deaths</div>
-        <div class="col s3 hospital green darken-1 white-text offset-s1 z-depth-2" id="hospital">hospital</div>
-      </div>
-    </div>
+    <div class="container" id="results"></div>
+    <div class="container" id="results2"></div>
+    <div class="container" id="results3"></div>
   </div>
 
-  <!-- ALERT MODALS
+  <!-- ALERT MODALS -->
   <div id="modal-entercity" class="modal">
     <div class="modal-content">
       <h4>Please enter a valid city</h4>
@@ -70,7 +67,16 @@
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
     </div>
-  </div> -->
+  </div>
+
+  <div id="modal-data" class="modal">
+    <div class="modal-content">
+      <h4>Data for this city is already populated</h4>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Close</a>
+    </div>
+  </div>
 
   <!-- CAROUSEL -->
   <div class="carousel carousel-slider center" style="max-height: 550px;">
@@ -99,20 +105,8 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="Develop/js/script.js"></script>
+  <script src="Develop/js/app.js"></script>
 
-<!-- 
-  <script src="text/javascript">
-   
-  function validateForm() {
-  var enter = document.getElementById("enter-city");
-  var error = document.getElementById("error")
-  if (enter === "") {
-    error.removeClass(hide);
-  }
-}
-  </script> -->
-  
-  </div>
 </body>
 
 </html>
