--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
-  <title>Home</title>
+  <title>Covidwise</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -16,7 +16,7 @@
 <body>
   <!-- NAV BAR -->
   <nav class="green lighten-3">
-    <div class="nav-wrapper container"><a id="logo-container" href="index.html" class="brand-logo">Covid site</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="index.html" class="brand-logo">Covidwise</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html">Home</a></li>
         <li><a href="Pages/symptom-tracker.html">Symptom Tracker</a></li>
@@ -42,7 +42,7 @@
           <form class="col s12">
             <div class="row">
               <div class="input-field">
-                <input placeholder="e.g Birmingham, London" id="enter-city" type="text" class="validate">
+                <input placeholder="e.g Birmingham" id="enter-city" type="text" class="validate">
                 <label for="city">Enter city</label>
                 <!-- <p class="hide" id="error">Please enter a city</p> -->
                 <button id="search-btn" class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
@@ -82,11 +82,11 @@
   <div class="carousel carousel-slider center" style="max-height: 550px;">
     <div class="carousel-fixed-item center">
     </div>
-    <div class="carousel-item"><img class="responsive-img" src="Assets/Images/row-1-col-1.jpg">
+    <div class="carousel-item"><img class="responsive-img nhs" alt="nhs" src="Assets/Images/row-1-col-1.jpg">
     </div>
-    <div class="carousel-item"><img class="responsive-img" src="Assets/Images/row-1-col-2.jpg">
+    <div class="carousel-item"><img class="responsive-img nhs" alt="nhs" src="Assets/Images/row-1-col-2.jpg">
     </div>
-    <div class="carousel-item"><img class="responsive-img" src="Assets/Images/row-1-col-3.jpg">
+    <div class="carousel-item"><img class="responsive-img nhs" alt="nhs" src="Assets/Images/row-1-col-3.jpg">
     </div>
   </div>
   </div>
