--- a/Pages/symptom-tracker.html
+++ b/Pages/symptom-tracker.html
@@ -19,7 +19,7 @@
     <!-- NAV BAR -->
     <div id="holder">
     <nav class="green lighten-3" role="navigation">
-        <div class="nav-wrapper container"><a id="logo-container" href="index.html" class="brand-logo"><img src="../Assets/Images/logo.png" alt="Covidwise logo"/></a>
+        <div class="nav-wrapper container"><a id="logo-container" href="index.html" class="brand-logo"><img id="logo" src="../Assets/Images/logo.png" alt="Covidwise logo"/></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="symptom-tracker.html">Symptom Tracker</a></li>
