--- a/Pages/symptom-tracker.html
+++ b/Pages/symptom-tracker.html
@@ -22,7 +22,7 @@
         <div class="nav-wrapper container"><a id="logo-container" href="../index.html" class="brand-logo"><img id="logo" src="../Assets/Images/logo.png" alt="Covidwise logo"/></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="symptom-tracker.html">Symptom Tracker</a></li>
+                <li><a href="symptom-tracker.html" id="active-page">Symptom Tracker</a></li>
                 <li><a href="bored.html">Bored during lockdown?</a></li>
             </ul>
             <!-- MOBILE NAV -->
