--- a/Pages/bored.html
+++ b/Pages/bored.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="bored.css" type="text/css" rel="stylesheet" />
-  <link rel='icon' href='Assets/Images/favicon_io/favicon.ico' type='image/x-icon'/>
+  <link rel='icon' href='../Assets/Images/favicon_io/favicon.ico' type='image/x-icon'/>
 </head>
 
 <body>
