fixed logo link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- NAV BAR -->
   <div id="holder">
   <nav class="green lighten-3">
-    <div class="nav-wrapper container"><a id="logo-container" href="../index.html" class="brand-logo"><img id="logo" src="Assets/Images/logo.png" alt="Covidwise logo"/></a>
+    <div class="nav-wrapper container"><a id="logo-container" href="index.html" class="brand-logo"><img id="logo" src="Assets/Images/logo.png" alt="Covidwise logo"/></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html" id="active-page">Home</a></li>
         <li><a href="Pages/symptom-tracker.html">Symptom Tracker</a></li>
