Moved file to new directory

--- a/Pages/bored.html
+++ b/Pages/bored.html
@@ -9,7 +9,7 @@
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-  <link href="bored.css" type="text/css" rel="stylesheet" />
+  <link href="../Develop/css/bored.css" type="text/css" rel="stylesheet" />
   <link rel='icon' href='../Assets/Images/favicon_io/favicon.ico' type='image/x-icon'/>
 </head>
 
