--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
           </form>
           <!-- USED LATER TO ADD PREVIOUSLY SEARCHED CITIES -->
-          <form id="history"></form>
+          <p id="recents"><ul id="history"></ul></p>
         </div>
       </div>
     <!-- DISPLAYS SEARCH RESULTS -->
