--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <div class="nav-wrapper container"><a id="logo-container" href="index.html" class="brand-logo"><img id="logo" src="Assets/Images/logo.png" alt="Covidwise logo"/></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="index.html" id="active-page">Home</a></li>
-        <li><a href="Pages/symptom-tracker.html">Symptom Tracker</a></li>
+        <li><a href="Pages/symptom-checker.html">Symptom Checker</a></li>
         <li><a href="Pages/bored.html">Bored during lockdown?</a></li>
       </ul>
       <!-- MOBILE NAV -->
       <ul id="nav-mobile" class="sidenav">
         <li><a href="index.html">Home</a></li>
-        <li><a href="Pages/symptom-tracker.html">Symptom Tracker</a></li>
+        <li><a href="Pages/symptom-checker.html">Symptom Checker</a></li>
         <li><a href="Pages/bored.html">Bored during lockdown?</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
